# video-workflow

./: .gitignore  README.md
transcriber-api/: .gitignore  README.md  pyproject.toml  requirements.txt
transcriber-api/app/: __init__.py  main.py
transcriber-api/app/db/: __init__.py  database.py
transcriber-api/app/models/: __init__.py  job.py
transcriber-api/app/routes/: __init__.py  jobs.py
transcriber-api/app/services/: __init__.py  audio_extractor.py  cleaner.py  exceptions.py  media_downloader.py  pipeline.py  transcriber.py
transcriber-api/app/services/distiller/: __init__.py  distiller.py  forbidden_detector.py  quality_checker.py  types.py
transcriber-api/app/services/distiller/tests/: test_distiller.py
transcriber-api/app/services/feishu_publisher/: __init__.py  publisher.py  types.py
transcriber-api/app/services/feishu_publisher/tests/: __init__.py  test_feishu_publisher.py
transcriber-api/docs/: FEISHU_SETUP.md
transcriber-api/tests/: conftest.py  test_jobs.py  test_media_services.py  test_pipeline_fail.py  test_publish_feishu.py
